fix: a11y issues - color contrast (#531)
## Overview

Fix color contrast to pass accessibility tests.

## Related

- caused by https://github.com/TACC/Core-CMS/pull/1089
- requires https://github.com/TACC/Core-CMS/pull/1144
- required by https://github.com/TACC/Core-Portal-Deployments/pull/170

## Changes

- **deletes** ecep-derived neutral colors
    <sup>this makes easier/consistent a11y color contrast testing)</sup>
- **changes** an accent color to pass a11y color contrast
- **adds** footer style to use black bkgd not header color

## Testing

Run [Link Color Contrast
Checker](https://webaim.org/resources/linkcontrastchecker/?fcolor=222222&bcolor=FFFFFF&lcolor=844FCD)
against all combinations of text and background colors.
- https://pprd.ecep.tacc.utexas.edu/publications/ (light and muted
sections)
- https://pprd.ecep.tacc.utexas.edu/resources/models/cmp/ (dark
sections)

Test Accordion (`<details><summary>`) UI states match those of links:
- https://pprd.ecep.tacc.utexas.edu/cs-data/ecep-cs-education-dashboard/

## UI

Skipped.

--- a/ecep_assets/css/html-elements.css
+++ b/ecep_assets/css/html-elements.css
@@ -6,7 +6,6 @@ h2 {
 }
 .o-section--style-muted h2,
 .section--muted h2 {
-  color: unset;
   opacity: 0.75;
 }
 
